tests/ui_board/snapshots/ui_board__snapshots__application_owned_shortcuts_use_semantic_inline_emphasis.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 133
expression: "snapshot(&mut fixture, 48, 8, ThemePreference::Dark)"
---
SIZE 48x8

TEXT
00│⋮ Press Enter, then Esc to return.│
01││
02│                  + New thought│
03││
04││
05│  proqi-ui-annotated-contract│
06│  1 thought · board · saved│
07│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-7 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 8-12 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 13-19 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 20-22 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 23-47 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-45 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 46-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
