tests/ui_board/snapshots/ui_board__snapshots__command_palette_has_a_complete_searchable_buffer.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 362
expression: "snapshot(&mut fixture, 72, 18, ThemePreference::Dark)"
---
SIZE 72x18

TEXT
00││
01│⋮ review release readiness│
02││
03│       ┌ commands ────────────────────────────────────────────[x]│
04│       │:session                                                ││
05│       │Rename session                                   session││
06│       │Copy session ID                                  session││
07│       │Send to another Proqi session                    session││
08│       │Send to another Proqi session and remove thought        ││
09│       └────────────────────────────────────────────────────────┘│
10││
11││
12││
13││
14││
15│  proqi-ui-contract│
16│  1 thought · board · saved│
17│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│

STYLE RUNS
0: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-61 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 62-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-15 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 16-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-21 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 22-56 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 57-63 fg=Rgb(176, 169, 160) bg=Rgb(39, 40, 48) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-56 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 57-63 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-56 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 57-63 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
14: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
15: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
16: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
17: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-29 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 30-31 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 32-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-44 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 45-45 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 46-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 55-55 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 56-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
