tests/ui_board/snapshots/ui_board__snapshots__contiguous_range_latch_has_a_complete_visible_board_state.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 223
expression: "snapshot(&mut fixture, 52, 14, ThemePreference::Dark)"
---
SIZE 52x14

TEXT
00││
01│  alpha│
02│  ──────────────────────────────────────────────────│
03││
04│⋮ Grüße 👩‍💻│
05│  ──────────────────────────────────────────────────│
06││
07│  第 二 行│
08││
09││
10││
11│  proqi-ui-contract│
12│  4 thoughts · range · saving│
13│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-51 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
3: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-8 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 9-9 fg=Reset bg=Reset mod=NONE | 10-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-51 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
6: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=NONE | 1-2 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 3-3 fg=Reset bg=Reset mod=NONE | 4-4 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 5-5 fg=Reset bg=Reset mod=NONE | 6-6 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 7-7 fg=Reset bg=Reset mod=NONE | 8-51 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
8: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-49 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 50-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-51 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
