tests/ui_board/snapshots/ui_board__snapshots__durable_blank_and_editing_surface.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 77
expression: "snapshot(&mut fixture, 50, 9, ThemePreference::Light)"
---
SIZE 50x9

TEXT
00││
01│⋮│
02││
03││
04││
05││
06│  proqi-ui-contract│
07│  1 thought · edit · saving│
08│  Esc Board  : Commands  ? Shortcuts│

STYLE RUNS
0: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-49 fg=Rgb(30, 27, 24) bg=Rgb(236, 236, 240) mod=NONE
2: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
3: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
4: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
5: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
6: 0-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
7: 0-1 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE | 2-47 fg=Rgb(79, 70, 62) bg=Rgb(250, 250, 248) mod=NONE | 48-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
8: 0-1 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE | 2-4 fg=Rgb(45, 106, 79) bg=Rgb(250, 250, 248) mod=NONE | 5-12 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE | 13-13 fg=Rgb(45, 106, 79) bg=Rgb(250, 250, 248) mod=NONE | 14-24 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE | 25-25 fg=Rgb(45, 106, 79) bg=Rgb(250, 250, 248) mod=NONE | 26-49 fg=Rgb(30, 27, 24) bg=Rgb(250, 250, 248) mod=NONE
